--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.0"
+    "mongoose": "^9.1.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
